--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -2,7 +2,7 @@ bind_to_address "127.0.0.1"
 #bind_to_address "~/.mpd/socket"
 #port "9999"
 music_directory "~/Music"
-playlist_directory "~/.config/mpd/playlists"
+playlist_directory "~/Music/playlists"
 db_file "~/.config/mpd/mpd.db"
 log_file "~/.config/mpd/mpd.log"
 pid_file "~/.config/mpd/mpd.pid"
@@ -27,3 +27,10 @@ audio_output {
     path "/tmp/mpd.fifo"
     format "44100:16:2"
 }
+
+playlist_plugin {
+    name "m3u"
+    enabled "true"
+    as_directory "true"
+}
+
