--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -40,44 +40,47 @@ song_status_format = " $2%a $4⟫$3⟫ $8%t $4⟫$3⟫ $5%b "
 user_interface = "alternative" # or `classic`
 #default_place_to_search_in = "database" 
 
-### Browser ##
+## Browser ##
 #browser_display_mode = "columns"  
 browser_playlist_prefix = "$2playlist$9 "
 
-### Current Item ##
+## Current Item ##
 #current_item_prefix = "$(blue)$r"
 #current_item_suffix = "$/r$(end)"
 #current_item_inactive_column_prefix = "$(cyan)$r"
 #current_item_inactive_column_suffix = "$/r$(end)"
 
-### Visualizer ##
+## Visualizer ##
 #visualizer_fifo_path = "/tmp/mpd.fifo"
 #visualizer_output_name = "my_fifo"
 #visualizer_sync_interval = "12"
 visualizer_type = "ellipse" # (spectrum/wave)
 visualizer_in_stereo = "yes"
 ##visualizer_look = "+|"
-#visualizer_look = "●▮"
+#visualizer_look = "●▮" 
+#visualizer_color = blue, cyan, green, yellow, magenta, red   # Set by default
+## Alternative subset of 256 colors for terminals that support it.
+#visualizer_color = 41, 83, 119, 155, 185, 215, 209, 203, 197, 161
 
-### Navigation ##
+## Navigation ##
 cyclic_scrolling = "yes"
 header_text_scrolling = "yes"
 jump_to_now_playing_song_at_start = "yes"
 lines_scrolled = "2"
 
-### Other ##
-#system_encoding = "utf-8"
+## Other ##
+#system_encoding = "utf-8"  # Enabled by default
 regular_expressions = "extended" 
 
-### Selected tracks ##
+## Selected tracks ##
 selected_item_prefix = "* "
 discard_colors_if_item_is_selected = "no"
 
-### Seeking ##
+## Seeking ##
 #incremental_seeking = "yes"
 #seek_time = "1"
 
-### Visivility ##
+## Visivility ##
 #header_visibility = "yes"
 #statusbar_visibility = "yes"
 #titles_visibility = "yes" 
@@ -91,9 +94,31 @@ now_playing_prefix = "$b>> "
 now_playing_suffix = "$/b"
 centered_cursor = "yes"
 
+## Colors ##
+#colors_enabled = "yes" 
+#empty_tag_color = "cyan"
+#header_window_color = "default" 
+#volume_color = "default" 
+#state_line_color = "default" 
+#state_flags_color = "default:b" 
+#main_window_color = "yellow" 
+#color1 = "white" 
+#color2 = "green"
+#progressbar_color = "black:b"
+#progressbar_elapsed_color = "green:b"
+#statusbar_color = "default"
+#statusbar_time_color = "default:b"
+#player_state_color = "default:b"
+#alternative_ui_separator_color = "black:b"
+#window_border_color = "green"
+#active_window_border = "red"
+
 ## Misc
 display_bitrate = "yes"
-##enable_window_title = "no"
+clock_display_seconds = "yes"
+#enable_window_title = "no"
 ignore_leading_the = "yes"
-#empty_tag_marker = ""
+#empty_tag_marker = "" 
+execute_on_song_change = "mpc-notify" 
+external_editor = "nvim"
 
