--- a/.config/PCSX2/inis/PCSX2_ui.ini
+++ b/.config/PCSX2/inis/PCSX2_ui.ini
@@ -1,4 +1,4 @@
-MainGuiPosition=1294,36
+MainGuiPosition=1189,36
 SysSettingsTabName=Game Fixes
 McdSettingsTabName=none
 ComponentsTabName=Plugins
@@ -11,7 +11,7 @@ GzipIsoIndexTemplate=$(f).pindex.tmp
 Listbook_ImageSize=32
 Toolbar_ImageSize=24
 Toolbar_ShowLabels=enabled
-CurrentIso=/home/glenn/Games/PS2/DragonBall Z - Budokai 3 - Collector's Edition (Europe) (En,Ja,Fr,De,Es,It).iso
+CurrentIso=/home/glenn/Games/PS2/Spider-Man 2 (Europe).iso
 CurrentBlockdump=
 CurrentELF=
 CurrentIRX=
@@ -42,7 +42,7 @@ Multitap2_Slot4_Filename=Mcd-Multitap2-Slot04.ps2
 [ProgramLog]
 Visible=disabled
 AutoDock=enabled
-DisplayPosition=3387,36
+DisplayPosition=3282,36
 DisplaySize=1100,836
 FontSize=8
 Theme=Default
@@ -80,7 +80,7 @@ DefaultToFullscreen=disabled
 AlwaysHideMouse=enabled
 DisableResizeBorders=disabled
 DisableScreenSaver=enabled
-WindowSize=1248,1388
+WindowSize=1143,1388
 WindowPos=30,36
 IsMaximized=disabled
 IsFullscreen=disabled
@@ -159,3 +159,4 @@ GPU=disabled
 Filename00=/home/glenn/Games/Shadow of the Colossus (Europe, Australia) (En,Fr,De,Es,It).iso
 Filename01=/home/glenn/Games/PS2/Ratchet & Clank 3 (Europe, Australia) (En,Fr,De,Es,It).iso
 Filename02=/home/glenn/Games/PS2/DragonBall Z - Budokai 3 - Collector's Edition (Europe) (En,Ja,Fr,De,Es,It).iso
+Filename03=/home/glenn/Games/PS2/Spider-Man 2 (Europe).iso
